--- a/styles/group.css
+++ b/styles/group.css
@@ -40,7 +40,10 @@ body {
 .top_text p {
     font-size: 16px;
 }
-
+.top_img{
+    display: flex;
+    align-items: flex-end;
+}
 .top_img img {
     width: 581px;
     height: 631px;
