--- a/styles/web2.css
+++ b/styles/web2.css
@@ -38,6 +38,10 @@ body {
 .top_text p {
     font-size: 16px;
 }
+.top_img {
+    display: flex;
+    align-items: flex-end;
+}
 
 .top_img img {
     width: 581px;
