--- a/styles/web2.css
+++ b/styles/web2.css
@@ -27,7 +27,8 @@ body {
 }
 
 .top_text {
-    width: 531px;
+    /* width: 531px; */
+    width: 100%;
     padding: 5%;
 }
 
@@ -213,6 +214,7 @@ hr {
         text-align: center;
         padding: 0;
         margin-bottom: 30px;
+        /* margin: 0 0 30px 0; */
     }
 
     .top_text h1 {
